--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 
 .App-header {
   background-color: #282c34;
+  background-image: url(./assets/sunsetBG.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
