--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 body {
+  display: flex;
+  align-items: center;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -7,6 +10,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url(./assets/sunsetBG.jpg);
   background-size: cover;
+  height: 100vh;
+  border: 10px blue solid;
 }
 
 code {
