--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
   display: flex;
   align-items: center;
 
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -12,6 +11,7 @@ body {
   background-size: cover;
   height: 100vh;
   border: 10px blue solid;
+  justify-content: center;
 }
 
 code {
