added an additional bg image and changed css code so that when the screen size changes from mobile to desktop, the background changes too

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body {
   justify-content: center;
 }
 
+@media screen and (min-width: 768px) {
+  body {
+    background-image: url(./assets/sunset.jpg);
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
